--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -4,6 +4,10 @@
   display: flex;
 }
 
+.post_userInfo {
+  text-align: left;
+}
+
 .post_text {
   font-size: 1.2em;
 }
@@ -47,5 +51,5 @@
 }
 
 .post_submitIconDisable {
-  pointer-events: none;
+  pointer-events: none !important;
 }
