--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -8,7 +8,12 @@
   text-align: left;
 }
 
+.post_textContain {
+  text-align: left;
+}
+
 .post_text {
+  margin-left: 20px;
   font-size: 1.2em;
 }
 
@@ -25,10 +30,18 @@
   max-width: 100%;
 }
 
+.post_iconsContain {
+  display: flex;
+}
+
 .post_commentOpenIcons {
-  display: block !important;
-  margin: 0 auto 0 10px !important;
+  display: inline-block !important;
+  margin-right: 10px;
   font-size: 1em !important;
+}
+
+.post_favoriteIcon {
+  display: inline-block !important;
 }
 
 .post_comments {
