--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,7 +1,11 @@
 .post_content {
   margin: 0 auto;
-  max-width: 600px;
+  width: clamp(150px, 600px, 100%);
   display: flex;
+}
+
+.post_main {
+  width: clamp(200px, 350px, 100%);
 }
 
 .post_userInfo {
@@ -32,12 +36,17 @@
 
 .post_iconsContain {
   display: flex;
+  justify-content: space-between;
 }
 
 .post_commentOpenIcons {
   display: inline-block !important;
   margin-right: 10px;
   font-size: 1em !important;
+}
+
+.post_options {
+  padding-top: 10px;
 }
 
 .post_favoriteIcon {
@@ -65,4 +74,14 @@
 
 .post_submitIconDisable {
   pointer-events: none !important;
+}
+
+.post_modal {
+  overflow-y: scroll;
+}
+
+.post_favoriteUsers {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
 }
