--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -58,6 +58,11 @@
   border-bottom: 1px solid #ccc;
 }
 
+.post_commentSubmit {
+  margin-top: 20px;
+  display: flex;
+}
+
 .post_commentInput {
   font-size: 1em;
   border: 0.5px solid #ccc;
