--- a/src/components/TalkRoom.module.css
+++ b/src/components/TalkRoom.module.css
@@ -1,10 +1,10 @@
-.chat_section {
+.talkRoom_section {
   position: relative;
   height: 100vh;
   width: 100%;
 }
 
-.chat_box {
+.talkRoom_box {
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 4px;
